--- a/notebook/2019-07-23-commonsample-precrecall/2019-07-23-commonsample-precrecall.ipynb
+++ b/notebook/2019-07-23-commonsample-precrecall/2019-07-23-commonsample-precrecall.ipynb
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        " 'named-figure/prec-recall-common-sample.pdf']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
        " 'named-figure/prec-recall-common-sample-mosaicforecast-otherdata.pdf']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -646,9 +646,9 @@
     }
    ],
    "source": [
-    "multipr.plotter7(dt, otherdata=False)\n",
+    "fg = multipr.plotter7(dt, otherdata=False)\n",
     "attila_utils.savefig(fg, 'prec-recall-common-sample-mosaicforecast')\n",
-    "multipr.plotter7(dt, otherdata=True)\n",
+    "fg = multipr.plotter7(dt, otherdata=True)\n",
     "attila_utils.savefig(fg, 'prec-recall-common-sample-mosaicforecast-otherdata')"
    ]
   },
