before merge from GitHub

--- a/presentations/2019-08-09-bsmn-writing-group/2019-08-09-bsmn-writing-group.tex
+++ b/presentations/2019-08-09-bsmn-writing-group/2019-08-09-bsmn-writing-group.tex
@@ -18,8 +18,8 @@
 \mode<presentation>{
 \usetheme{Warsaw}
 %\usetheme{Antibes}
-\usecolortheme{beaver}
-%\usecolortheme{seahorse}
+%\usecolortheme{beaver}
+\usecolortheme{seahorse}
 %\usefonttheme{structureitalicserif}
 \setbeamercovered{transparent}
 }
