Finishing touch on BSMN workshop presentation

--- a/presentations/2019-08-27-bsmn-workshop/2019-08-27-bsmn-workshop.tex
+++ b/presentations/2019-08-27-bsmn-workshop/2019-08-27-bsmn-workshop.tex
@@ -132,7 +132,7 @@ NA12892 & 72 & 86 & 100 \\
 
 {\tiny
 \begin{tabular}{c|ccc}
-genotype & \multicolumn{3}{c}{AAF (\%)} \\
+genotype & \multicolumn{3}{c}{VAF (\%)} \\
 & mix1 &  mix2 & mix3 \\
 \hline
 0001 & 36 & 43 & 50\\
