PON creation: needs bgzipped VCFs for merge

--- a/notebook/2019-11-13-panel-of-normals/2019-11-13-panel-of-normals.ipynb
+++ b/notebook/2019-11-13-panel-of-normals/2019-11-13-panel-of-normals.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -38,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,6 +54,7 @@
       "MSSM_183_muscle\n",
       "MSSM_183_NeuN_mn\n",
       "MSSM_183_NeuN_pl\n",
+      "MSSM_193_NeuN_pl\n",
       "MSSM_215_NeuN_pl\n",
       "MSSM_295_muscle\n",
       "MSSM_295_NeuN_pl\n",
@@ -89,7 +81,9 @@
       "PITT_101_NeuN_pl\n",
       "PITT_118_NeuN_mn\n",
       "PITT_118_NeuN_pl\n",
-      "44 bam-list\n"
+      "\n",
+      "Number of files:\n",
+      "45 bam-list\n"
      ]
     }
    ],
@@ -98,7 +92,25 @@
     "cd /projects/bsm/attila/results/2019-11-13-panel-of-normals\n",
     "find /projects/bsm/alignments/ -name 'MSSM*.bam' -o -name 'PITT*.bam' | sort > bam-list\n",
     "for b in `cat bam-list`; do basename $b .bam; done\n",
+    "echo -e '\\n'Number of files:\n",
     "wc -l bam-list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "os\t sys\t \n"
+     ]
+    }
+   ],
+   "source": [
+    "who"
    ]
   },
   {
