Running PON VCF scipt

--- a/notebook/2019-11-13-panel-of-normals/2019-11-13-panel-of-normals.ipynb
+++ b/notebook/2019-11-13-panel-of-normals/2019-11-13-panel-of-normals.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,8 @@
     "%autoreload 2\n",
     "%matplotlib inline\n",
     "import attila_utils\n",
+    "import os.path\n",
+    "import glob\n",
     "import tnseq_pon"
    ]
   },
@@ -24,7 +26,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create `bam-list`, a list of BAMs for the CMC samples"
+    "Get the list of BAMs for the CMC samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/projects/bsm/alignments/PITT_118/PITT_118_NeuN_mn.bam',\n",
+       " '/projects/bsm/alignments/PITT_118/PITT_118_NeuN_pl.bam',\n",
+       " '/projects/bsm/alignments/PITT_101/PITT_101_NeuN_pl.bam',\n",
+       " '/projects/bsm/alignments/MSSM_369/MSSM_369_NeuN_mn.bam',\n",
+       " '/projects/bsm/alignments/MSSM_369/MSSM_369_NeuN_pl.bam',\n",
+       " '/projects/bsm/alignments/MSSM_369/MSSM_369_muscle.bam',\n",
+       " '/projects/bsm/alignments/MSSM_193/MSSM_193_NeuN_pl.bam',\n",
+       " '/projects/bsm/alignments/MSSM_056/MSSM_056_muscle.bam',\n",
+       " '/projects/bsm/alignments/MSSM_106/MSSM_106_NeuN_pl.bam',\n",
+       " '/projects/bsm/alignments/MSSM_106/MSSM_106_muscle.bam',\n",
+       " '/projects/bsm/alignments/MSSM_106/MSSM_106_NeuN_mn.bam',\n",
+       " '/projects/bsm/alignments/MSSM_338/MSSM_338_NeuN_pl.bam',\n",
+       " '/projects/bsm/alignments/PITT_036/PITT_036_NeuN_pl.bam',\n",
+       " '/projects/bsm/alignments/MSSM_331/MSSM_331_muscle.bam',\n",
+       " '/projects/bsm/alignments/MSSM_391/MSSM_391_NeuN_pl.bam',\n",
+       " '/projects/bsm/alignments/MSSM_391/MSSM_391_muscle.bam',\n",
+       " '/projects/bsm/alignments/MSSM_391/MSSM_391_NeuN_mn.bam',\n",
+       " '/projects/bsm/alignments/PITT_060/PITT_060_NeuN_pl.bam',\n",
+       " '/projects/bsm/alignments/MSSM_175/MSSM_175_NeuN_pl.bam',\n",
+       " '/projects/bsm/alignments/MSSM_183/MSSM_183_muscle.bam',\n",
+       " '/projects/bsm/alignments/MSSM_183/MSSM_183_NeuN_pl.bam',\n",
+       " '/projects/bsm/alignments/MSSM_183/MSSM_183_NeuN_mn.bam',\n",
+       " '/projects/bsm/alignments/MSSM_118/MSSM_118_NeuN_pl.bam',\n",
+       " '/projects/bsm/alignments/MSSM_118/MSSM_118_muscle.bam',\n",
+       " '/projects/bsm/alignments/MSSM_304/MSSM_304_NeuN_pl.bam',\n",
+       " '/projects/bsm/alignments/MSSM_304/MSSM_304_muscle.bam',\n",
+       " '/projects/bsm/alignments/MSSM_215/MSSM_215_NeuN_pl.bam',\n",
+       " '/projects/bsm/alignments/MSSM_065/MSSM_065_NeuN_pl.bam',\n",
+       " '/projects/bsm/alignments/MSSM_295/MSSM_295_NeuN_pl.bam',\n",
+       " '/projects/bsm/alignments/MSSM_295/MSSM_295_muscle.bam',\n",
+       " '/projects/bsm/alignments/MSSM_179/MSSM_179_NeuN_pl.bam',\n",
+       " '/projects/bsm/alignments/MSSM_179/MSSM_179_muscle.bam',\n",
+       " '/projects/bsm/alignments/MSSM_179/MSSM_179_NeuN_mn.bam',\n",
+       " '/projects/bsm/alignments/MSSM_033/MSSM_033_NeuN_pl.bam',\n",
+       " '/projects/bsm/alignments/MSSM_109/MSSM_109_NeuN_pl.bam',\n",
+       " '/projects/bsm/alignments/MSSM_109/MSSM_109_muscle.bam',\n",
+       " '/projects/bsm/alignments/MSSM_109/MSSM_109_NeuN_mn.bam',\n",
+       " '/projects/bsm/alignments/MSSM_373/MSSM_373_NeuN_pl.bam',\n",
+       " '/projects/bsm/alignments/MSSM_310/MSSM_310_NeuN_pl.bam',\n",
+       " '/projects/bsm/alignments/PITT_010/PITT_010_NeuN_pl.bam',\n",
+       " '/projects/bsm/alignments/PITT_010/PITT_010_NeuN_mn.bam',\n",
+       " '/projects/bsm/alignments/PITT_064/PITT_064_NeuN_pl.bam',\n",
+       " '/projects/bsm/alignments/PITT_064/PITT_064_NeuN_mn.bam',\n",
+       " '/projects/bsm/alignments/PITT_091/PITT_091_NeuN_mn.bam',\n",
+       " '/projects/bsm/alignments/PITT_091/PITT_091_NeuN_pl.bam']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bamlist = glob.glob('/projects/bsm/alignments/[MP][SI][ST][MT]_*/*.bam')\n",
+    "bamlist                    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This will be the name of the output PON VCF"
    ]
   },
   {
@@ -33,84 +107,26 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MSSM_033_NeuN_pl\n",
-      "MSSM_056_muscle\n",
-      "MSSM_065_NeuN_pl\n",
-      "MSSM_106_muscle\n",
-      "MSSM_106_NeuN_mn\n",
-      "MSSM_106_NeuN_pl\n",
-      "MSSM_109_muscle\n",
-      "MSSM_109_NeuN_mn\n",
-      "MSSM_109_NeuN_pl\n",
-      "MSSM_118_muscle\n",
-      "MSSM_118_NeuN_pl\n",
-      "MSSM_175_NeuN_pl\n",
-      "MSSM_179_muscle\n",
-      "MSSM_179_NeuN_mn\n",
-      "MSSM_179_NeuN_pl\n",
-      "MSSM_183_muscle\n",
-      "MSSM_183_NeuN_mn\n",
-      "MSSM_183_NeuN_pl\n",
-      "MSSM_193_NeuN_pl\n",
-      "MSSM_215_NeuN_pl\n",
-      "MSSM_295_muscle\n",
-      "MSSM_295_NeuN_pl\n",
-      "MSSM_304_muscle\n",
-      "MSSM_304_NeuN_pl\n",
-      "MSSM_310_NeuN_pl\n",
-      "MSSM_331_muscle\n",
-      "MSSM_338_NeuN_pl\n",
-      "MSSM_369_muscle\n",
-      "MSSM_369_NeuN_mn\n",
-      "MSSM_369_NeuN_pl\n",
-      "MSSM_373_NeuN_pl\n",
-      "MSSM_391_muscle\n",
-      "MSSM_391_NeuN_mn\n",
-      "MSSM_391_NeuN_pl\n",
-      "PITT_010_NeuN_mn\n",
-      "PITT_010_NeuN_pl\n",
-      "PITT_036_NeuN_pl\n",
-      "PITT_060_NeuN_pl\n",
-      "PITT_064_NeuN_mn\n",
-      "PITT_064_NeuN_pl\n",
-      "PITT_091_NeuN_mn\n",
-      "PITT_091_NeuN_pl\n",
-      "PITT_101_NeuN_pl\n",
-      "PITT_118_NeuN_mn\n",
-      "PITT_118_NeuN_pl\n",
-      "\n",
-      "Number of files:\n",
-      "45 bam-list\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'/projects/bsm/attila/results/2019-11-13-panel-of-normals/bsm-cmc-pon.vcf.gz'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%bash\n",
-    "cd /projects/bsm/attila/results/2019-11-13-panel-of-normals\n",
-    "find /projects/bsm/alignments/ -name 'MSSM*.bam' -o -name 'PITT*.bam' | sort > bam-list\n",
-    "for b in `cat bam-list`; do basename $b .bam; done\n",
-    "echo -e '\\n'Number of files:\n",
-    "wc -l bam-list"
+    "ponvcf = tnseq_pon.resultdir + os.path.sep + 'bsm-cmc-pon.vcf.gz'\n",
+    "ponvcf"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "os\t sys\t \n"
-     ]
-    }
-   ],
    "source": [
-    "who"
+    "Create PON VCF"
    ]
   },
   {
@@ -118,7 +134,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "if True:\n",
+    "    proc = tnseq_pon.all_bam2pon_merge(bamlist=bamlist, ponvcf=ponvcf)\n",
+    "    proc"
+   ]
   }
  ],
  "metadata": {
