correct read group for a single BAM

--- a/notebook/2019-11-19-data-check/2019-11-19-data-check.ipynb
+++ b/notebook/2019-11-19-data-check/2019-11-19-data-check.ipynb
@@ -538,6 +538,49 @@
     "fig = data_check.selfSMplot(selfSM)\n",
     "attila_utils.savefig(fig, 'freemix')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"shell_port\": 35393,\n",
+      "  \"iopub_port\": 41385,\n",
+      "  \"stdin_port\": 51831,\n",
+      "  \"control_port\": 44547,\n",
+      "  \"hb_port\": 44651,\n",
+      "  \"ip\": \"127.0.0.1\",\n",
+      "  \"key\": \"f8a0fa67-ff4b3f4cb11ac0b1ce72593b\",\n",
+      "  \"transport\": \"tcp\",\n",
+      "  \"signature_scheme\": \"hmac-sha256\",\n",
+      "  \"kernel_name\": \"\"\n",
+      "}\n",
+      "\n",
+      "Paste the above JSON into a file, and connect with:\n",
+      "    $> jupyter <app> --existing <file>\n",
+      "or, if you are local, you can connect with just:\n",
+      "    $> jupyter <app> --existing kernel-7daf46db-4b6d-4d07-95d8-e954407915c1.json\n",
+      "or even just:\n",
+      "    $> jupyter <app> --existing\n",
+      "if this is the most recent Jupyter kernel you have started.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%connect_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
