--- a/notebook/2019-11-19-data-check/2019-11-19-data-check.ipynb
+++ b/notebook/2019-11-19-data-check/2019-11-19-data-check.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 139,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -24,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +42,7 @@
        "'/home/attila/projects/bsm/notebook/2019-11-19-data-check'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +243,7 @@
        "[696 rows x 6 columns]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
