Added documentation on creating manifests

--- a/notebook/2019-12-09-upload-to-ndar/2019-12-09-upload-to-ndar.ipynb
+++ b/notebook/2019-12-09-upload-to-ndar/2019-12-09-upload-to-ndar.ipynb
@@ -202,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, upload the manifests to Synapse folder syn21344929.  See "
+    "Finally, upload the manifests to Synapse folder syn21344929.  See email from cindy.molitor@sagebase.org from 12/3/2019."
    ]
   },
   {
